--- a/index.html
+++ b/index.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
 <html lang="he">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>הסרת הגנת נטפרי</title>
 </head>
+
 <body>
-    <h1>home</h1>
-    <a href="https://remove-wifree.gq/cheks">בדיקה</a>
-    <br>
-    <br>
-    <a href="https://remove-wifree.gq/paypal">תשלום</a>
+
+    <header class="container py-3">
+        <!-- כותרת העמוד -->
+        <h1 class="text-center">ברוכים הבאים לאתר התוכנה להסרת נטפרי</h1>
+    </header>
+
+    <main class="container py-5 content">
+
+        <div class="btn-container">
+            <a href="https://remove-wifree.gq/cheks" class="btn-custom">בדיקה</a>
+            <a href="https://remove-wifree.gq/paypal" class="btn-custom">תשלום</a>
+        </div>
+
+        <!-- תוכן הדף -->
+        <section>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <h2>משוב חיובי מהלקוחות</h2>
+                    <p>כאן תוכל להכניס טקסט או ציטוטים מלקוחות מרוצים עם המוצר או השירות שלך.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>פרטים נוספים</h2>
+                    <p>כאן תוכל לציין פרטים נוספים או תיאור קצר של המוצר או השירות שלך.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <!-- כותרת תחתונה -->
+        <p class="text-center content">&copy; 2023 כל הזכויות שמורות</p>
+    </footer>
 </body>
+
 </html>
