--- a/downloads.html
+++ b/downloads.html
@@ -4,19 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>downloads</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="index.css">
+    <title>דף הורדה</title>
     <script src="2.js" defer></script>
     <script src="d.js" defer></script>
     <link rel="stylesheet" type="text/css" href="downloads.css">
 </head>
 
 <body>
-
-    <div class="container">
+    <main class="container py-5 content">
+            <div class="container">
         <h1>דף הורדה</h1>
         <br>
         <br>
         <button id="downloadBtn" onclick="downloads()" class="download-button">הורדה</button>
+    </main>
+
 
 
 
