--- a/cheks.html
+++ b/cheks.html
@@ -16,6 +16,9 @@
     <main class="container py-5 content">
         <h1>בדיקת תשלום</h1>
     </main>
-    
+    <footer class="footer">
+        <!-- כותרת תחתונה -->
+        <p class="text-center content">&copy; 2023 כל הזכויות שמורות</p>
+    </footer>
 </body>
 </html>
