--- a/downloads.html
+++ b/downloads.html
@@ -24,12 +24,16 @@
         <br>
         <br>
         <button id="downloadBtn" onclick="downloads()" class="download-button">הורדה</button>
+        </div>
     </main>
 
 
 
-
-    </div>
+    <footer class="footer">
+        <!-- כותרת תחתונה -->
+        <p class="text-center content">&copy; 2023 כל הזכויות שמורות</p>
+    </footer>
+    
 
 </body>
 
