--- a/paypal.html
+++ b/paypal.html
@@ -12,10 +12,15 @@
     <title>תשלום</title>
 </head>
 <body>
-    <main class="container py-5 content">
+    <main class="container py-5 content btn-container">
             <h1>תשלום</h1>
-    <a href="https://remove-wifree.gq/cheks">בדיקה</a>
-    </main>
+    
+    <a href="https://remove-wifree.gq/cheks" class="btn-custom">בדיקה</a>
 
+    </main>
+    <footer class="footer">
+        <!-- כותרת תחתונה -->
+        <p class="text-center content">&copy; 2023 כל הזכויות שמורות</p>
+    </footer>
 </body>
 </html>
