--- a/downloads.html
+++ b/downloads.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
-<link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>דף הורדה</title>
     <script src="2.js" defer></script>
     <script src="d.js" defer></script>
@@ -18,12 +18,18 @@
 </head>
 
 <body>
+
+    <header class="container py-3">
+        <!-- כותרת העמוד -->
+        <h1 class="text-center">ברוכים הבאים לאתר התוכנה להסרת נטפרי</h1>
+    </header>
+
     <main class="container py-5 content">
-            <div class="container">
-        <h1>דף הורדה</h1>
-        <br>
-        <br>
-        <button id="downloadBtn" onclick="downloads()" class="download-button">הורדה</button>
+        <div class="container">
+            <h1>דף הורדה</h1>
+            <!-- <br>
+            <br> -->
+            <button id="downloadBtn" onclick="downloads()" class="download-button">הורדה</button>
         </div>
     </main>
 
@@ -33,7 +39,7 @@
         <!-- כותרת תחתונה -->
         <p class="text-center content">&copy; 2023 כל הזכויות שמורות</p>
     </footer>
-    
+
 
 </body>
 
