--- a/cheks.html
+++ b/cheks.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="he">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css" href="index.css">
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>בדיקת תשלום</title>
-    <script src="cheks.js" ></script>
+    <script src="cheks.js"></script>
 </head>
+
 <body>
+    <header class="container py-3">
+        <!-- כותרת העמוד -->
+        <h1 class="text-center">ברוכים הבאים לאתר התוכנה להסרת נטפרי</h1>
+    </header>
+
     <main class="container py-5 content">
         <h1>בדיקת תשלום</h1>
     </main>
+    
     <footer class="footer">
         <!-- כותרת תחתונה -->
         <p class="text-center content">&copy; 2023 כל הזכויות שמורות</p>
     </footer>
 </body>
+
 </html>
