--- a/downloads.html
+++ b/downloads.html
@@ -9,12 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="downloads.css">    
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    
     <title>דף הורדה</title>
     <script src="2.js" defer></script>
     <script src="d.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="downloads.css">
+    
 </head>
 
 <body>
@@ -29,7 +30,7 @@
             <h1>דף הורדה</h1>
             <!-- <br>
             <br> -->
-            <button id="downloadBtn" onclick="downloads()" class="download-button">הורדה</button>
+            <button id="downloadBtn" onclick="downloads()" class="btn-custom">הורדה</button>
         </div>
     </main>
 
