--- a/paypal.html
+++ b/paypal.html
@@ -20,7 +20,7 @@
         <h1 class="text-center">ברוכים הבאים לאתר התוכנה להסרת נטפרי</h1>
     </header>
 
-    <main class="container py-5 content btn-container">
+    <main class="container py-5 content btn-container text-center">
         <h1>תשלום</h1>
         <div class="btn-container">
             <a href="https://remove-wifree.gq/cheks" class="btn-custom">בדיקה</a>
