--- a/cheks.html
+++ b/cheks.html
@@ -20,7 +20,7 @@
         <h1 class="text-center">ברוכים הבאים לאתר התוכנה להסרת נטפרי</h1>
     </header>
 
-    <main class="container py-5 content">
+    <main class="container py-5 content text-center">
         <h1>בדיקת תשלום</h1>
     </main>
     
