--- a/downloads.html
+++ b/downloads.html
@@ -30,7 +30,7 @@
             <h1>דף הורדה</h1>
             <!-- <br>
             <br> -->
-            <button id="downloadBtn" onclick="downloads()" class="btn-custom">הורדה</button>
+            <button id="downloadBtn" onclick="downloads()" class="btn-custom" style="display: none;">הורדה</button>
         </div>
     </main>
 
