--- a/downloads.html
+++ b/downloads.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     
     <title>דף הורדה</title>
-    <script src="2.js" defer></script>
-    <script src="d.js" defer></script>
+    <script src="./2.js" defer></script>
+    <script src="./d.js" defer></script>
+    <script src="./cheks.js" defer></script>
     
 </head>
 
@@ -28,9 +29,8 @@
     <main class="container py-5 content">
         <div class="container">
             <h1>דף הורדה</h1>
-            <!-- <br>
-            <br> -->
-            <button id="downloadBtn" onclick="downloads()" class="btn-custom" style="display: none;">הורדה</button>
+
+            <button id="downloadBtn" onclick="downloadFiles()" class="btn-custom" style="display: none;">הורדה</button>
         </div>
     </main>
 
