--- a/payment.html
+++ b/payment.html
@@ -23,7 +23,7 @@
     <main class="container py-5 content btn-container text-center">
         <h1>תשלום</h1>
         <div class="btn-container">
-            <a href="https://remove-wifree.gq/cheks" class="btn-custom">בדיקה</a>
+            <a href="https://remove-wifree.gq/verification" class="btn-custom">בדיקה</a>
         </div>
 
 
