--- a/payment.html
+++ b/payment.html
@@ -20,9 +20,9 @@
         <h1 class="text-center">ברוכים הבאים לאתר התוכנה להסרת נטפרי</h1>
     </header>
 
-    <main class="container py-5 content btn-container text-center">
+    <main class="container py-5 content text-center">
         <h1>תשלום</h1>
-        <div class="btn-container">
+        <div class="btn-container ">
             <a href="https://remove-wifree.gq/verification" class="btn-custom">בדיקה</a>
         </div>
 
