--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -20,10 +20,11 @@
         <h1 class="text-center">ברוכים הבאים לאתר התוכנה להסרת נטפרי</h1>
     </header>
 
-    <main class="container py-5 content text-center">
+    <main class="container py-5 content text-center btn-container">
         <h1>תשלום</h1>
+
+        <a href="./verification.html" class="btn-custom">בדיקה</a>
         <div class="btn-container ">
-            <a href="https://remove-wifree.gq/verification" class="btn-custom">בדיקה</a>
         </div>
 
 
