--- a/payment.html
+++ b/payment.html
@@ -23,7 +23,7 @@
     <main class="container py-5 content text-center btn-container">
         <h1>תשלום</h1>
 
-        <a href="./verification.html" class="btn-custom">בדיקה</a>
+        <a href="./verification" class="btn-custom">בדיקה</a>
         <div class="btn-container ">
         </div>
 
