--- a/verification.html
+++ b/verification.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>בדיקת תשלום</title>
-    <script defer src="cheks.js"></script>
+    <script defer src="cheks2.js"></script>
 </head>
 
 <body>
