--- a/downloads.html
+++ b/downloads.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     
     <title>דף הורדה</title>
-    <script src="./2.js" defer></script>
-    <script src="./d.js" defer></script>
+    <script src="2.js" defer></script>
+    <script src="d.js" defer></script>
         
 </head>
 
