--- a/downloads.html
+++ b/downloads.html
@@ -14,7 +14,7 @@
     
     <title>דף הורדה</title>
     <script src="2.js" defer></script>
-    <script src="d.js" defer></script>
+    <script src="dd.js" defer></script>
         
 </head>
 
