--- a/verification.html
+++ b/verification.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>בדיקת תשלום</title>
-    <script defer src="cheks2.js"></script>
+    <script defer src="cheks.js"></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <main class="container py-5 content text-center">
         <h1>בדיקת תשלום</h1>
     </main>
-    
+
     <footer class="footer">
         <!-- כותרת תחתונה -->
         <p class="text-center content">&copy; 2023 כל הזכויות שמורות</p>
