--- a/downloads.html
+++ b/downloads.html
@@ -9,13 +9,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="downloads.css">    
     <link rel="stylesheet" type="text/css" href="index.css">
-    
+
     <title>דף הורדה</title>
-    <script src="2.js" defer></script>
-    <script src="dd.js" defer></script>
-        
+    <script defer src="downloads.js"></script>
 </head>
 
 <body>
