--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <main class="container py-5 content">
 
         <div class="btn-container">
-            <a href="https://remove-wifree.gq/verification" class="btn-custom">בדיקה</a>
-            <a href="https://remove-wifree.gq/payment" class="btn-custom">תשלום</a>
+            <a href="verification.html" class="btn-custom">בדיקה</a>
+            <!-- <a href="https://remove-wifree.gq/verification" class="btn-custom">בדיקה</a> -->
+            <a href="payment.html" class="btn-custom">תשלום</a>
+            <!-- <a href="https://remove-wifree.gq/payment" class="btn-custom">תשלום</a> -->
         </div>
 
         <!-- תוכן הדף -->
